--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "./dist/npm-rollup-boilerplate.js",
   "module": "./src/index.js",
   "scripts": {
+    "start": "rollup -c -w -m inline",
+    "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ofk",
