--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-exponentiation-operator": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
     "rollup": "^0.42.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-watch": "^4.0.0"
