--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^7.0.1",
     "rollup": "^0.42.0",
     "rollup-plugin-babel": "^2.7.1",
-    "rollup-watch": "^4.0.0"
+    "rollup-watch": "^4.0.0",
+    "uglify-js": "^3.0.15"
   }
 }
